Disconnect `QtabWidget::currentChanged` signal on window close event

Otherwise `MainWindow::changeCurrentTab()` may still get called when things are already being destroyed, leading to crashes.

BUG: 409375
FIXED-IN: 20.04.2